Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90490

Crash on system with non-standard locale

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.4
    • 5.15.3
    • WebEngine
    • None
    • Windows
    • 75d061bbc68875c08b3dc243e464e32a80da71df (qt/qtwebengine/5.15)

      simplebrowser crashes on system with 'en-DE' locale, which is missing among 'translations/qtwebengine_locales':

      1  base::debug::BreakDebugger                                debugger_win.cc              31  
      2  logging::LogMessage::~LogMessage                          logging.cc                   879 
      3  logging::LogMessage::`scalar deleting destructor'         Qt5WebEngineCore                 
      4  base::LinearHistogram::FactoryGet                         histogram.cc                 885 
      5  base::LinearHistogram::FactoryGet                         histogram.cc                 906 
      6  ui::ResourceBundle::LoadLocaleResources                   resource_bundle_qt.cpp       123 
      7  ui::ResourceBundle::InitSharedInstanceWithLocale          resource_bundle.cc           265 
      8  QtWebEngineCore::ContentMainDelegateQt::PreSandboxStartup content_main_delegate_qt.cpp 182 
      9  content::ContentMainRunnerImpl::Initialize                content_main_runner_impl.cc  787 
      10 QtWebEngineCore::WebEngineContext::WebEngineContext       web_engine_context.cpp       772 
      11 QtWebEngineCore::WebEngineContext::current                web_engine_context.cpp       433 
      12 QtWebEngineCore::ProfileAdapter::globalQObjectRoot        profile_adapter.cpp          242 
      13 QWebEngineProfile::defaultProfile                         qwebengineprofile.cpp        696 
      14 QWebEngineSettings::globalSettings                        qwebenginesettings.cpp       144 
      15 main                                                      main.cpp                     77  
      16 __scrt_common_main_seh                                    exe_common.inl               288 
      17 BaseThreadInitThunk                                       KERNEL32                         
      18 RtlUserThreadStart                                        ntdll                             
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kiburtse Kirill Burtsev
            kiburtse Kirill Burtsev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes