Allow to fallback to default locale for non existent data packs

Fix crash for locales, for which there is no pak data file (like en-DE).
Match original chromium's implementation for LocaleDataPakExists by
checking if path for file exists in order to not to try to load invalid
non-existent pack file.

Change-Id: I47c5cc97c09bdf8e78dcff024d82796d4c419f2c
Fixes: QTBUG-90490
Reviewed-by: Michael Brüning <michael.bruning@qt.io>